Fixed alignment issues.

--- a/scss/_issues.scss
+++ b/scss/_issues.scss
@@ -7,7 +7,7 @@
     margin-bottom: 2rem;
   }
   .featured-text {
-    padding: 4rem 1rem 0;
+    padding: 4rem 0 0;
     border-top: 0.25rem solid $primary;
     @media (min-width: 992px) {
       padding: 1rem 0 1rem 4rem;
