--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -12,6 +12,10 @@
 body {
   font-family: 'Work Sans', sans-serif;
 }
+.container {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Antic Slab';
 }
